--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>My App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/bootstrap.css" />
   <link rel="stylesheet" href="/css/style.css" />
 </head>
@@ -46,6 +47,11 @@
   </footer>
 
   </div> <!-- /container -->
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="/js/jquery-3.1.0.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="/js/bootstrap.js"></script>
 
 </body>
 
